<resources>
  <string name="app_name">Kalory</string>
  <string name="welcome">Welcome</string>
  <string name="monday">Monday</string>
  <string name="foodname">FoodName</string>
  <string name="imc">Imc</string>
  <string name="tcal">Tcal</string>
  <string name="meal">Meal</string>
  <string name="tuesday">Tuesday</string>
  <string name="wednesday">Wednesday</string>
  <string name="thursday">Thursday</string>
  <string name="friday">Friday</string>
  <string name="saturday">Saturday</string>
  <string name="sunday">Sunday</string>
  <string name="week">Total cal</string>
  <string name="day">Day</string>
  <string name="morning">Morning</string>
  <string name="midday">Midday</string>
  <string name="night">Evening</string>
  <string name="name">Name</string>
  <string name="height">Height</string>
  <string name="weight">Weight</string>
  <string name="age">Age</string>
  <string name="buttonContinue">Continue</string>
  <string name="buttonAddProduct">+</string>
  <string-array name="gender">
    <item>Male</item>
    <item>Female</item>
    <item>Other</item>
  </string-array>
  <string-array name="partOfDay">
    <item>Morning</item>
    <item>Midday</item>
    <item>Evening</item>
  </string-array>
  <string name="partOfDayTitle">Register a meal</string>
  <string name="partOfDayQtPlaceholder">Quantity</string>
  <string name="partOfDaySpinnerPlaceholder">Choose a part of day</string>
  <string name="partOfDayAutocompleteHint">Select a product</string>
  <string name="partOfDayButton">Submit</string>
</resources>