<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252928"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/my_border"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:padding="25dp"
            android:text="@string/partOfDayTitle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/partOfDayAutocompleteHint"
            android:padding="25dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editTextQt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/partOfDayQtPlaceholder"
            android:ems="10"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/partOfDayQtPlaceholder"
            android:inputType="number"
            android:padding="25dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

      <Spinner
            android:id="@+id/spinnerPartOfDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_horizontal|center"
            android:autofillHints="@string/partOfDaySpinnerPlaceholder"
            android:entries="@array/partOfDay"
            android:forceDarkAllowed="false"
            android:padding="25dp"
            android:theme="@style/CustomSpinner" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/partOfDayButton" />

</LinearLayout>