<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewFoodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/foodname" />

        <TextView
            android:id="@+id/textViewTkcal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/tcal" />

        <TextView
            android:id="@+id/textViewMeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/meal" />

    </LinearLayout>
</LinearLayout>