<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252928"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewKal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/diet" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/my_border"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/age"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextTextPersonHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:hint="@string/height"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextTextPersonWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:hint="@string/weight"
            android:inputType="number" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:entries="@array/gender"
            android:gravity="center"
            android:theme="@style/CustomSpinner"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/teal_700"
            android:gravity="center"
            android:text="Continue" />
    </LinearLayout>

</LinearLayout>